<b>Version 1.28</b>:<br>
<ul>
    <li>[<span style="color: #e21af3">BUG</span>] Erstes Element eines Ordners kann nicht mittels Autoplay gestartet werden.</li>
    <li>[<span style="color: #e21af3">BUG</span>] Ordnerübergreifendes Autoplay funktioniert noch nicht, sofern Ordner und Medieninhalt im selben Elternordner sind</li>
    <li>[<span style="color: red">FEATURE</span>] Einstellungsmenü hinzugefügt zum manipulieren der Autoplay-Werte und zur Fehlerbehebung.</li>
    <li>[<span style="color: red">FEATURE</span>] Autoplayfunktion eingefügt zum automatischen Abspielen von Medieninhalten (z.B. Diashow)</li>
    <li>[<span style="color: red">FEATURE</span>] Vor- und Zurück-Buttons benötigen kein neues Laden sofern die Medien im selben Ordner sind</li>
    <li>[<span style="color: darkgreen">BUGFIX</span>] Kommas in Ordner oder Dateinamen konnten zu fehlerhaftem Laden führen.</li>
    <li>[OPTIMIERUNG] Einführen von Listenseperator-Stringketten</li>
    <li>[OPTIMIERUNG] Überarbeitung Ein- und Ausblenden von Containern</li>
    <li>[OPTIMIERUNG] Überarbeitung Ordnerübergreifender links</li>
</ul>
<b>Version 1.271</b>:<br>
<ul>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Zuletzt gespielt Einträge wurden bei Updates der Tiefe 1 oder kleiner fehlerhaft ersetzt</li>
</ul>
<b>Version 1.27</b>:<br>
<ul>
    <li>[<span style="color: blue">INTERFACE</span>] Überarbeitung Anzeige Suchresultate</li>
    <li>[OPTIMIERUNG] Überarbeitung Vorschaubild-Einbettung</li>
    <li>[<span style="color: darkgreen">BUGFIX</span>] Vorschaubilder auf Startbildschirm und Suche aus allen Tiefen möglich</li>
    <li>[<span style="color: darkgreen">BUGFIX</span>] Falsche Namensgebung bei Zeitstempel-Suche korrigiert. Es kann sein, dass Zuvor gespeicherte Zeitstempel jeweils im nächsten Eintrag gespeichert ist.</li>
</ul>
<b>Version 1.261</b>:<br>
<ul>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Anpassung der Grösse des Audio-Players</li>
</ul>
<b>Version 1.26</b>:<br>